caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_extends_bracket.caffeine
Blueprints
  "test" extends [_base:
    Requiring { env: String }
    Provides { value: "x" }
